added pictures to git, and modified code according to pictures

--- a/profile.html
+++ b/profile.html
@@ -110,9 +110,9 @@
                 <h3>Picture Gallery</h3>
                 <div class="pictures">
                     <figure>
-                        <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t39.30808-6/310062382_6344100202271843_5665844812844472903_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=IxfHfzdX-oIAX956j1Q&_nc_ht=scontent-arn2-1.xx&oh=00_AfCAKDA0E9EV3xYaSSDC2NML8Q0BiCIQbyBfRTQW0PxJlQ&oe=64F82B16" alt="Picture: Thinkful me" width="300"><br>
-                        <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t39.30808-6/278144167_641224653938222_6352249400932637785_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=a2f6c7&_nc_ohc=aKyWcvzk3tAAX-jnQgW&_nc_ht=scontent-arn2-1.xx&oh=00_AfDUqmT_ZHTda23rJepPp3ChKqWAFapiM7P8OHCfGHBtsg&oe=64F882E1" alt="Picture: This is me" width="300"><br>
-                        <img src="https://scontent-arn2-1.xx.fbcdn.net/v/t31.18172-8/26172445_2005739003002235_6178006099984306243_o.jpg?_nc_cat=108&ccb=1-7&_nc_sid=cdbe9c&_nc_ohc=NkkJMxXNoDQAX-bP3IW&_nc_ht=scontent-arn2-1.xx&oh=00_AfB-IYwmdaUT5vrpiqrucRtlPjdsHUPXxJkpX6O63uKL7g&oe=651A9395" alt="Picture: Me and me and me" width="300">
+                        <img src="../Reigo-page/mina_kaabuga.jpg" alt="Picture: Thinkful me" width="300"><br>
+                        <img src="../Reigo-page/mina.jpg" alt="Picture: This is me" width="300"><br>
+                        <img src="../Reigo-page/mina 2017 dets - scr-shot.jpg" alt="Picture: Me and me and me" width="300">
                     </figure>
                 </div>
             </aside>
