added logos to contact, removed dots

--- a/profile.html
+++ b/profile.html
@@ -85,11 +85,11 @@
             <aside>
                 <h3>Contact Me</h3>
                     <ul>
-                        <li>Phone: +372-5650-4672</li>
-                        <li>e-mail: <a href="mailto:reigo.reimets@gmail.com"target="_blank" class="contact-hover">reigo.reimets@gmail.com</a></li>
-                        <li>Facebook link: <a href="https://www.facebook.com/reigo.reimets"target="_blank" class="contact-hover">FB reigo.reimets</a></li>
-                        <li>Instagram: <a href="https://www.instagram.com/reigo.reimets"target="_blank" class="contact-hover">reigo.reimets</a></li>
-                        <li>LinkedIn: <a href="https://www.linkedin.com/in/reigo-reimets-0b17b3264"target="_blank" class="contact-hover">Reigo Reimets</a></li>
+                        <img src="../Reigo-page/mobile-logo.png" alt="Icon: Mobile icon" height="15"> +372-5650-4672<br>
+                        <img src="../Reigo-page/gmail-email-icon.png" alt="Icon: gmail icon" height="15"> <a href="mailto:reigo.reimets@gmail.com"target="_blank" class="contact-hover">reigo.reimets@gmail.com</a><br>
+                        <img src="../Reigo-page/facebook-logo.png" alt="Icon: Facebook icon" height="15"> <a href="https://www.facebook.com/reigo.reimets"target="_blank" class="contact-hover">FB reigo.reimets</a><br>
+                        <img src="../Reigo-page/instagram_logo.png" alt="Icon: Instagram icon" height="15"> <a href="https://www.instagram.com/reigo.reimets"target="_blank" class="contact-hover">reigo.reimets</a><br>
+                        <img src="../Reigo-page/linkedin-logo.png" alt="Icon: LinkedIn icon" height="15"> <a href="https://www.linkedin.com/in/reigo-reimets-0b17b3264"target="_blank" class="contact-hover">Reigo Reimets</a><br>
                     </ul>
             </aside>
         </section>
