contact me area spacing

--- a/profile.html
+++ b/profile.html
@@ -82,7 +82,7 @@
                     </nav>
             </aside><br><br>
 
-            <aside>
+            <aside id="contact-me">
                 <h3>Contact Me</h3>
                     <ul>
                         <img src="../Reigo-page/mobile-logo.png" alt="Icon: Mobile icon" height="15"> +372-5650-4672<br>
